fix items spacing

--- a/starter-code/app/css/main.css
+++ b/starter-code/app/css/main.css
@@ -754,6 +754,7 @@ body {
 
 .partners__item {
   width: 50%;
+  margin-bottom: 2.6rem;
 }
 
 @media screen and (min-width: 42.667em) {
